# forensicSuite

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  RELEASES.md  SECURITY.md  forensic-suite-live.iso.sha256  forensic_suite.spec  forensic_suite_completion.sh  install.sh  pyproject.toml  requirements.txt  setup.py
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: build-windows.yml
docs/: 00_RESUMEN_EJECUTIVO.md  01_GUIA_USUARIO.md  02_GUIA_TECNICA.md  03_PROTOCOLO_FORENSE.md  04_VERIFICACION_CONTRA_PERITAJE.md  05_MARCO_LEGAL.md  06_VALIDACION_HERRAMIENTAS.md  CLASE_11_CARVING_AVANZADO.md  CREAR_USB_LIVE.md  EJERCICIOS_PRACTICOS_1.md  EJERCICIOS_PRACTICOS_2.md  FORENSIA_PARA_PRINCIPIANTES.md  GUIA_COMPLETA_PROCESO_FORENSE.md  GUIA_HERRAMIENTAS_POR_PLATAFORMA.md  INSTALACION.md  INSTALACION_WINDOWS.md  MANUAL_FORENSIC_SUITE.md  PSEUDOCODIGO_FORENSIC_SUITE.md
forensic_suite/: __init__.py  __main__.py  banner.py  shell.py
forensic_suite/configs/: cripto.conf  documentos.conf  general.conf  medios.conf  mensajeria.conf  recuperacion.conf  redes.conf
forensic_suite/core/: __init__.py  cadena_custodia.py  dispositivo.py  firma_gpg.py  hasher.py  manifest.py  memoria.py  perito.py  scalpel.py  timestamp.py
forensic_suite/daemon/: 10-forensic-block.rules  mforense  (+4 more)
forensic_suite_windows/: win_main.py
tests/: test_suite.py
tools/: build-live-usb.sh  build-windows.ps1
wiki/: Comandos.md  FAQ.md  Home.md  Instalacion-Linux.md  Instalacion-Windows.md  Releases.md  _Sidebar.md
(+1 files in other folders)
