[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "forensic-suite"
version = "2.0.0"
description = "Framework de Análisis Forense Digital con cadena de custodia MP 2017 y auditoría firmada. (Académico)"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "Tr3w01"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Information Technology",
    "Topic :: Security",
    "Topic :: System :: Filesystems",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
]
dependencies = [
    "psutil>=5.9.0",
]

[project.optional-dependencies]
full = [
    "cryptography>=41.0.0",
    "requests>=2.28.0",
]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.scripts]
forensic_suite = "forensic_suite.__main__:main"
fs = "forensic_suite.__main__:main"
forensic_suite_win = "forensic_suite_windows.win_main:main"

[project.urls]
Repository = "https://github.com/tr3w01/forensic_suite"

[tool.setuptools.packages.find]
include = ["forensic_suite*", "forensic_suite_windows*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
